--- a/apple.html
+++ b/apple.html
@@ -15,19 +15,26 @@
       <header>
         <div class="deed">
           <nav><i class="fa-brands fa-apple fa-xl"></i></nav>
-          <a href="./applestore.html"> Store</a>
-          <nav>Mac</nav>
-          <nav>iPad</nav>
-          <nav>iPhone</nav>
-          <nav>Watch</nav>
-          <nav>Vision</nav>
-          <nav>Airpods</nav>
-          <nav>TV & Home</nav>
-          <nav>Entertainment</nav>
-          <nav>Accessories</nav>
-          <nav>Support</nav>
-          <nav><img src="./Item → Button - Search apple.com.png" alt="" /></nav>
-          <nav><img src="./Item.png" alt="" /></nav>
+          <div class="navi">
+            <a href="./applestore.html">Store</a>
+            <nav>Mac</nav>
+            <nav>iPad</nav>
+            <nav>iPhone</nav>
+            <nav>Watch</nav>
+            <nav>Vision</nav>
+            <nav>Airpods</nav>
+            <nav>TV & Home</nav>
+            <nav>Entertainment</nav>
+            <nav>Accessories</nav>
+            <nav>Support</nav>
+          </div>
+          <div class="logo">
+            <nav>
+              <img src="./Item → Button - Search apple.com.png" alt="" />
+            </nav>
+            <nav><img src="./Item.png" alt="" /></nav>
+            <nav class="bhgu"><img src="Button - Menu.png" alt="" /></nav>
+          </div>
         </div>
         <div class="donate">
           We're donating $5 to the Global Fund for every purchase made with
@@ -56,20 +63,45 @@
       </div>
       <div class="gift">
         <div class="page3">
-          <div class="arvanzurgaa">Gift magic</div>
-          <div class="bichig">Make their holiday wish come true</div>
-          <div class="button">
-            <button class="shop">Shop gifts</button>
+          <div class="algabol">
+            <div class="arvanzurgaa">Gift magic</div>
+            <div class="bichig">Make their holiday wish come true</div>
+            <div class="button">
+              <button class="shop">Shop gifts</button>
+            </div>
+          </div>
+          <div class="none0">
+            <div class="none">
+              <div><img src="./air.png" alt="" /></div>
+              <div class="bichig">Two sizes. Faster chip. Does it all.</div>
+              <div>
+                <button class="learn">Learn</button>
+                <button class="buy">Buy</button>
+              </div>
+            </div>
+            <div class="ungu2"><span>Hello, Apple intelligence</span></div>
           </div>
         </div>
-        <div></div>
       </div>
       <div class="page4">
         <div class="duuruv">
           <div class="neg">
-            <div class="sda">
-              <div><img src="./air.png" alt="" /></div>
-              <div class="bichig">Two sizes. Faster chip. Does it all</div>
+            <div class="algabol">
+              <div class="sda">
+                <div><img src="./air.png" alt="" /></div>
+                <div class="bichig">Two sizes. Faster chip. Does it all</div>
+                <div class="button">
+                  <button class="learn">Learn more</button>
+                  <button class="buy">Buy</button>
+                </div>
+              </div>
+            </div>
+            <div class="none3">
+              <div class="arvanzurgaa">Airpods 4</div>
+              <div class="bichig">
+                Iconic. Now supersonic. Available with Active Noise
+                Cancellation.2
+              </div>
               <div class="button">
                 <button class="learn">Learn more</button>
                 <button class="buy">Buy</button>
@@ -78,60 +110,116 @@
             <div class="ungu"><span>Hello, Apple intelligence</span></div>
           </div>
           <div class="hoyr">
-            <div class="arvanzurgaa">Airpods Pro 2</div>
-            <div class="bichig">Now with a Hearing Aid feature.2</div>
-            <div class="button">
-              <button class="learn">Learn more</button>
-              <button class="buy">Buy</button>
+            <div class="algabol">
+              <div class="arvanzurgaa">Airpods Pro 2</div>
+              <div class="bichig">Now with a Hearing Aid feature.2</div>
+              <div class="button">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
+            </div>
+            <div class="none1">
+              <div class="arvanzurgaa">
+                <i class="fa-brands fa-apple fa-xl"></i> Watch
+              </div>
+              <div class="watch">SERIES 10</div>
+              <div class="bichig">Thinstant classic.</div>
+              <div class="button">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
             </div>
           </div>
           <div class="gurav">
-            <div class="arvanzurgaa">
-              <i class="fa-brands fa-apple fa-xl"></i> Watch
+            <div class="algabol">
+              <div class="arvanzurgaa">
+                <i class="fa-brands fa-apple fa-xl"></i> Watch
+              </div>
+              <div class="watch">SERIES 10</div>
+              <div class="bichig">Thinstant classic.</div>
+              <div class="button">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
             </div>
-            <div class="bichig">Thinstant classic.</div>
-            <div class="button">
-              <button class="learn">Learn more</button>
-              <button class="buy">Buy</button>
+            <div class="none">
+              <div class="arvanzurgaa">Macbook Air</div>
+              <div class="bichig">Lean. Mean. M3 machine.</div>
+              <div class="button">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
             </div>
           </div>
           <div class="duruv">
-            <div class="arvanzurgaa">Macbook Air</div>
-            <div class="bichig">Lean. Mean. M3 machine.</div>
-            <div class="button">
-              <button class="learn">Learn more</button>
-              <button class="buy">Buy</button>
+            <div class="algabol">
+              <div class="arvanzurgaa">Macbook Air</div>
+              <div class="bichig">Lean. Mean. M3 machine.</div>
+              <div class="button">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
+            </div>
+            <div class="none">
+              <div class="arvanzurgaa">Apple for Small Business</div>
+              <div class="bichig">
+                Hardware, software, and expert help - all in one place.
+              </div>
+              <div class="button">
+                <button class="learn">Learn more</button>
+              </div>
             </div>
           </div>
           <div class="tav">
-            <div class="arvanzurgaa">
-              <i class="fa-brands fa-apple fa-xl"></i>Trade In
+            <div class="algabol">
+              <div class="arvanzurgaa">
+                <i class="fa-brands fa-apple fa-xl"></i>Trade In
+              </div>
+              <div class="bichig">
+                Get $180-$650 in credit when you trade in Iphone 12 or higher.3
+              </div>
+              <div class="button">
+                <button class="learn">Get Your estimate</button>
+              </div>
             </div>
-            <div class="bichig">
-              Get $180-$650 in credit when you trade in Iphone 12 or higher.3
-            </div>
-            <div class="button">
-              <button class="learn">Get Your estimate</button>
+            <div class="none2">
+              <div class="arvanzurgaa">Carrier deals at Apple</div>
+              <div class="bichig">
+                Get up to $1000 in credit on a new iPhone. Trade-in may be
+                required.
+              </div>
+              <div class="button">
+                <button class="learn">Find Your deal</button>
+              </div>
             </div>
           </div>
           <div class="zurgaa">
-            <div class="arvanzurgaa">iPad air</div>
-            <div class="bichig">
-              Get up 3% Daily Cash back with every purchase
+            <div class="algabol">
+              <div class="arvanzurgaa">iPad air</div>
+              <div class="bichig">
+                Get up 3% Daily Cash back with every purchase
+              </div>
+              <div class="button">
+                <button class="learn">Learn more</button>
+                <button class="buy">Apply now</button>
+              </div>
             </div>
-            <div class="button">
-              <button class="learn">Learn more</button>
-              <button class="buy">Apply now</button>
+            <div class="none">
+              <div class="arvanzurgaa">
+                <i class="fa-brands fa-apple fa-xl"></i>Trade In
+              </div>
+              <div class="bichig">
+                Get $180-$650 in credit when you trade in iPhone 12 or higher.4
+              </div>
+              <div class="button">
+                <button class="learn">Get your estimate</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="page5">
-        <div
-          id="item1"
-          class="scroll"
-          style="background-image: url(./napoleon.jpg)"
-        >
+        <div id="item1" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span1">Drama</span>
@@ -139,11 +227,7 @@
             <span class="span3">Experience Ridley Scott's extended epic.</span>
           </div>
         </div>
-        <div
-          id="item2"
-          class="scroll"
-          style="background-image: url(./bad-monkey.jpg)"
-        >
+        <div id="item2" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span1">Comedy</span>
@@ -151,11 +235,7 @@
             <span class="span3">The shady side of paradise.</span>
           </div>
         </div>
-        <div
-          id="item3"
-          class="scroll"
-          style="background-image: url(./instigators.jpg)"
-        >
+        <div id="item3" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span1">Action</span>
@@ -163,11 +243,7 @@
             <span class="span3">Worst. Heist. Ever.</span>
           </div>
         </div>
-        <div
-          id="item4"
-          class="scroll"
-          style="background-image: url(./k-pop-idols.jpg)"
-        >
+        <div id="item4" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span1">Documentary</span>
@@ -175,11 +251,7 @@
             <span class="span3">All that glitters isn't gold.</span>
           </div>
         </div>
-        <div
-          id="item5"
-          class="scroll"
-          style="background-image: url(./season-pass.jpg)"
-        >
+        <div id="item5" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span3"
@@ -187,11 +259,7 @@
             >
           </div>
         </div>
-        <div
-          id="item6"
-          class="scroll"
-          style="background-image: url(./pressumed-innocent.jpg)"
-        >
+        <div id="item6" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span1">Crime</span>
@@ -199,11 +267,7 @@
             <span class="span3">Presume nothing.</span>
           </div>
         </div>
-        <div
-          id="item7"
-          class="scroll"
-          style="background-image: url(./pachinko.jpg)"
-        >
+        <div id="item7" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span1">Drama</span>
@@ -211,21 +275,13 @@
             <span class="span3">New season.</span>
           </div>
         </div>
-        <div
-          id="item8"
-          class="scroll"
-          style="background-image: url(./baseball.jpg)"
-        >
+        <div id="item8" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span3">Live MLB games, every friday.</span>
           </div>
         </div>
-        <div
-          id="item9"
-          class="scroll"
-          style="background-image: url(./lady-in-the-lake.jpg)"
-        >
+        <div id="item9" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span1">Thriller</span>
@@ -236,11 +292,7 @@
             >
           </div>
         </div>
-        <div
-          id="item10"
-          class="scroll"
-          style="background-image: url(./morning-show.jpg)"
-        >
+        <div id="item10" class="scroll">
           <div class="carousel">
             <button class="dardag2">Stream now</button>
             <span class="span1">Drama</span>
