--- a/applestore.html
+++ b/applestore.html
@@ -14,7 +14,8 @@
     <div id="layout">
       <header>
         <div class="deed">
-          <nav><i class="fa-brands fa-apple fa-xl"></i></nav>
+          <!-- <nav><i class="fa-brands fa-apple fa-xl"></i></nav> -->
+          <a href="./apple.html"><i class="fa-brands fa-apple fa-xl"></i></a>
           <a href="./applestore.html"> Store</a>
           <nav>Mac</nav>
           <nav>iPad</nav>
