--- a/apple.html
+++ b/apple.html
@@ -87,7 +87,7 @@
         <div class="duuruv">
           <div class="neg">
             <div class="algabol">
-              <div class="sda">
+              <div class="sad">
                 <div><img src="./air.png" alt="" /></div>
                 <div class="bichig">Two sizes. Faster chip. Does it all</div>
                 <div class="button">
